--- a/Updates.css
+++ b/Updates.css
@@ -25,12 +25,6 @@
   margin-bottom: 1px;
 }
 
-.u-section-1 .u-shape-2 {
-  height: 12px;
-  margin-top: -558px;
-  margin-bottom: 60px;
-}
-
 @media (max-width: 1199px) {
    .u-section-1 {
     min-height: 402px;
@@ -51,52 +45,63 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-text-1 {
-    margin-left: auto;
-    margin-right: auto;
+   .u-section-1 {
+    min-height: 318px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-right: calc(((100% - 720px) / 2));
-    margin-left: 0;
-    transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
-  }
-}
-
-@media (max-width: 767px) {
   .u-section-1 .u-text-1 {
+    font-size: 1.625rem;
+    margin-top: 25px;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-text-2 {
+    font-size: 1.0625rem;
     width: auto;
+    margin-top: 23px;
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+
+  .u-section-1 .u-shape-1 {
+    margin-bottom: 23px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-text-2 {
     margin-top: 14px;
     margin-left: 63px;
     margin-right: 63px;
+    transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
   }
 
   .u-section-1 .u-shape-1 {
     margin-top: 55px;
-    margin-bottom: 0;
+    margin-bottom: -34px;
   }
 }
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 633px;
+    min-height: 469px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 30px;
+    margin-top: 39px;
     margin-left: 13px;
     margin-right: 13px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 24px;
     margin-left: 25px;
     margin-right: 25px;
+  }
+
+  .u-section-1 .u-shape-1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
 
@@ -121,11 +126,11 @@
 }
 
 .u-section-1 .u-text-2.u-text-2.u-text-2:hover {
-  transform: scale(1.1) translateX(0px) translateY(0px) !important;
+  transform: scale(1.02) translateX(0px) translateY(0px) !important;
 }
 
 .u-section-1 .u-text-2.u-text-2.u-text-2.hover {
-  transform: scale(1.1) translateX(0px) translateY(0px) !important;
+  transform: scale(1.02) translateX(0px) translateY(0px) !important;
 } .u-section-2 {
   background-image: none;
   min-height: 2180px;
@@ -736,12 +741,14 @@
 
 @media (max-width: 575px) {
    .u-section-2 {
-    min-height: 4091px;
+    min-height: 5199px;
   }
 
   .u-section-2 .u-text-1 {
-    margin-left: calc(((100% - 340px) / 2));
-    margin-right: calc(((100% - 340px) / 2));
+    width: 340px;
+    margin-top: 12px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-2 .u-text-2 {
