--- a/Hero-Mode.css
+++ b/Hero-Mode.css
@@ -15,7 +15,7 @@
   --animation-custom_in-scale: 0.3;
   font-family: Splatfont;
   font-weight: 700;
-  margin: 162px 379px 0 0;
+  margin: 162px 366px 0 13px;
 }
 
 .u-section-1 .u-text-2 {
@@ -26,7 +26,7 @@
   --animation-custom_in-scale: 0.3;
   font-family: Splatfont;
   font-size: 1.875rem;
-  margin: 9px 245px 60px 56px;
+  margin: 9px 233px 60px 68px;
 }
 
 @media (max-width: 1199px) {
@@ -40,6 +40,7 @@
 
   .u-section-1 .u-text-1 {
     width: auto;
+    margin-left: 0;
     margin-right: 0;
   }
 
